--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,19 @@
 version: '3'
-services:
-  web:
-    build: .
-    command: sh -c "rm -f tmp/pids/server.pid && rails s -p 3000 -b '0.0.0.0'"
+services: # 配下に起動するコンテナの詳細を記述する。
+  web: # Railsアプリのサービス名（自由に設定できる）
+    build: . # ymlを同じ階層にあるDockerfileを参照してイメージを使用する。
+    command: sh -c "rm -f tmp/pids/server.pid && rails s -p 3000 -b '0.0.0.0'" # sh -c（引数で渡したコマンドをシェルで実行する） / pidsファイルの削除とRails sを続けて実行する。 / server.pidが残っているとサーバー起動に失敗するため。/ -b （バインド）全てのIPアドレスで待ち受ける。→ PC上でもコンテナにアクセスできる。
     volumes: # ホストのディレクトリをコンテナの/appにマウントする。
         - .:/app
-      ports: # ホストからコンテナ内のRailsサーバーに接続。
+    ports: # ホストからコンテナ内のRailsサーバーに接続。
         - 3000:3000
-      depends_on:
-        - db
+    depends_on: # サービス間の依存関係を制御 / DBコンテナが立ち上がってからRailsコンテナが立ち上がる。
+      - db
   db:
     image: mysql:8.0
-    volumes:
+    volumes: # マウント先のコンテナのディレクトリ（ここにMySQLが保存される）
       - db-volumes:/var/lib/mysql
-    environment:
+    environment: # コンテナに環境変数を設定
       MYSQL_ROOT_PASSWORD: password
-volumes:
+volumes: # コンテナ外にボリュームを作成
   db-volume:
